<resources>
    <string name="app_name">Alarming</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="disable_methods">
        <item>Button</item>
        <item>Location</item>
    <!--     <item>QR Code</item>
        <item>Shake (Optional)</item>
        <item>Fingerprint (Optional)</item>
        <item>NFC (Optional)</item> -->
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="name_field_time">Time</string>
    <string name="name_field_date">Date</string>
    <string name="name_field_description">Description</string>
    <string name="name_spinner_disablemethod">Alarm Disable Method</string>
    <string name="name_switch_enablealarm">Enable Alarm</string>
    <string name="name_toolbar_settings">Settings</string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="sign_in_cancelled">Sign In Cancelled</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="unknown_error">Unknown Login Error</string>
    <string name="signed_out">Signed Out</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="upload_settings">Upload Settings</string>
    <string name="download_settings">Download Settings</string>
    <string name="disable_button">Disable</string>
    <string name="alarm_screen">ALARM</string>
    <string name="export_settings">Export Settings</string>
    <string name="import_settings">Import Settings</string>
    <string name="location_permission_disabled">Location Permissions are Disabled!</string>
    <string name="require_current_location">Require Current Location</string>
    <string name="bad_location">No Location Provided by API! Try running Maps and modifying the GPS data.</string>
</resources>
